fixed image alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -53,10 +53,6 @@ a {
     max-height: 500px;
   }
 
-  img {
-    max-height: 500px;
-  }
-
   .banner-content {
     max-height: 500px;
     position: absolute;
